fix: overflow roue

--- a/frontend/src/components/HomePage/HomePage.scss
+++ b/frontend/src/components/HomePage/HomePage.scss
@@ -28,6 +28,7 @@
       height: 40px;
       font-size: 24px;
       text-align: center;
+      border-radius: 8px;
     }
   }
   .difficulty-home-page {
@@ -47,6 +48,7 @@
       height: 40px;
       font-size: 24px;
       text-align: center;
+      border-radius: 8px;
     }
   }
   .validation-button-home-page {
