--- a/frontend/src/components/Roue/Roue.scss
+++ b/frontend/src/components/Roue/Roue.scss
@@ -9,7 +9,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  overflow-x: 0;
+  overflow-x: hidden;
 
   .button-spin {
     font-size: 64px;
